--- a/triad-pro/CMakeLists.txt
+++ b/triad-pro/CMakeLists.txt
@@ -11,5 +11,6 @@ add_executable(triadc
   src/triad_bytecode.hpp
   src/triad_vm.cpp
   src_inlineconstchar.cpp
+  src_chunk.h
 )
 target_include_directories(triadc PRIVATE src)
